[package]

name = "pistoncore-window"
version = "0.0.0"
authors = [
    "bvssvni <bvssvni@gmail.com>",
    "Coeuvre <coeuvre@gmail.com>"
]
tags = ["window", "game"]
description = "A library for window abstraction"
license = "MIT"
readme = "README.md"
repository = "https://github.com/pistondevelopers/window.git"
homepage = "https://github.com/pistondevelopers/window"

[lib]

name = "window"
path = "src/lib.rs"

[dependencies]

pistoncore-input = "0.0.0"
pistoncore-current = "0.0.0"
pistoncore-event_loop = "0.0.0"

